fix(conflicts): integrate ConflictEngine and fix all imports
- ConflictEngine: fix imports (Player → PlayerCharacter, add fromSpec factory impl)
- Conflict: add fromSpec() factory implementation
- ConflictManager: remove deleted ConflictType/Tactic imports, use string-based API
- DayEndProcessor: replace ConflictTriggers with ConflictEngine
- PlayerCharacter: remove deleted tactics imports, stub availableConflictTactics()

All code now compiles with data-driven conflict system.